8/8/25:

- add box shadow to images and about section
- add diagonal background to about section
- adjust container and image sizes

8/7/25:

- create basic html sections for layout
- add project stills
- add svgs, icons, and project gif files
- create basic plan

8/6/25:

- set up and link basic files