@@ -13,13 +13,29 @@
                 <img src="./images/fisherman.jpg" alt="Majima from the Yakuza series" class="about-image">
                 <div class="about-text">
                     <h2>About</h2>
-                    <p>this is the about section. text content will go here.</p>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis justo non tincidunt tincidunt. Duis in diam sem. Etiam quam tellus, vestibulum at lobortis et, faucibus vehicula nibh. Praesent iaculis enim velit, non interdum risus mollis vel. Mauris rutrum dapibus felis in luctus. Mauris ac tortor id ipsum viverra vulputate. Quisque non enim at ante porttitor aliquam vel varius ex. Sed ut justo vestibulum, aliquam dolor porttitor, aliquet tortor. </p>
+                    <p class="about-icon-container">
+                        <a href="https://ca.linkedin.com/"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" class="about-icons" /></a>
+                        <a href="https://github.com/MK-DlR"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="about-icons" /></a>
+                    </p>
                 </div>
             </div>
         </section>
         <section class="projects">
             <h2>Projects</h2>
-            <p>this is the project section. project cards will go here.</p>
+            <div class="card-section">
+                <div class="project-card">
+                    image here
+                    <div class="project-card-header">
+                        <h3>Project Title</h3>
+                        <div class="project-icon-container">
+                            <a href="URL"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
+                            <a href="URL"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                        </div>
+                    </div>
+                    <p class="project-desc">Project description</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="contact">
